<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_margin_start"
        android:layout_marginTop="@dimen/title_margin_top"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/image_view_width"
        android:layout_height="@dimen/image_view_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/image_view_margin_top"
        android:contentDescription="@string/app_logo_desc"
        android:src="@mipmap/ic_launcher_round" />

    <androidx.cardview.widget.CardView
        android:id="@+id/summery_card"
        android:layout_width="@dimen/card_view_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/cardView_margin_top"
        android:elevation="@dimen/cardView_elevation"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/cardView_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/user_details_TV_marginTop"
                android:text="@string/Summery"
                android:textSize="@dimen/user_details_TV_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_TV_margin_start"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/user_name"
                    android:textSize="@dimen/summery_card_TV_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_user_name_TV_margin_start"
                    android:text="@string/colon"
                    android:textSize="@dimen/colon_TV_size" />

                <TextView
                    android:id="@+id/name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_result_TV_margin_start"
                    android:textSize="@dimen/summery_card_result_TV_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_summery_card_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_TV_email_margin_start"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/email"
                    android:textSize="@dimen/summery_card_TV_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/colon_TV_email_margin_start"
                    android:text="@string/colon"
                    android:textSize="@dimen/colon_TV_email_size" />

                <TextView
                    android:id="@+id/email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_result_TV_margin_start"
                    android:textSize="@dimen/summery_card_result_TV_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_summery_card_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_TV_margin_start"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/summery_card_TV_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/colon_TV_email_margin_start"
                    android:text="@string/colon"
                    android:textSize="@dimen/colon_TV_size" />

                <TextView
                    android:id="@+id/phone_number_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_result_TV_margin_start"
                    android:textSize="@dimen/summery_card_result_TV_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_summery_card_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_TV_margin_start"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/pincode"
                    android:textSize="@dimen/summery_card_TV_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/colon_TV_email_margin_start"
                    android:text="@string/colon"
                    android:textSize="@dimen/colon_TV_size" />

                <TextView
                    android:id="@+id/pin_code_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_result_TV_margin_start"
                    android:textSize="@dimen/summery_card_result_TV_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_summery_card_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_TV_margin_start"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/address"
                    android:textSize="@dimen/summery_card_TV_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/colon_TV_email_margin_start"
                    android:text="@string/colon"
                    android:textSize="@dimen/colon_TV_size" />

                <TextView
                    android:id="@+id/address_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/summery_card_result_TV_margin_start"
                    android:textSize="@dimen/summery_card_result_TV_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_layout_margin_top"
                android:layout_marginBottom="@dimen/button_layout_margin_bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/conform_button_margin_start"
                    android:text="@string/conform_button" />

                <Button
                    android:id="@id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cancel_button_margin_start"
                    android:text="@string/cancel_button" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>